# cmake_optimize_for_architecture

./: .gitignore  AddCCompilerFlag.cmake  Architecture.cmake  CFeatureCheck.cmake  CMakeLists.txt  Compiler.cmake  CompilerOptimizations.cmake  HostOptimizations.cmake  LICENSE.md  Optimizations.cmake  OptimizationsLate.cmake  OptimizeForArchitecture.cmake  README.md  architecture.cmake  bloaty.cmake  cache.cmake  compiler.cmake  compiler_optimizations.cmake  default.nix  derivation.nix  flamegraph.cmake  git.cmake  host_optimizations.cmake  optviewer.cmake  result  shell.nix  target_generation.cmake  test.c  test.sh
.github/workflows/: aarch64.yml  riscv.yml  test.yaml  x86.yml  x86_.yml
autovectorize/cpp/: accumulate_custom.cpp  check.py
checks/: cpu_avx5124maps.cpp  cpu_avx5124vnniw.cpp  cpu_avx512bf16.cpp  cpu_avx512bitalg.cpp  cpu_avx512bw.cpp  cpu_avx512cd.cpp  cpu_avx512dq.cpp  cpu_avx512er.cpp  cpu_avx512f.cpp  cpu_avx512fma52.cpp  cpu_avx512fp16.cpp  cpu_avx512pf.cpp  cpu_avx512vaes.cpp  cpu_avx512vbmi.cpp  cpu_avx512vbmi2.cpp  cpu_avx512vl.cpp  cpu_avx512vnni.cpp  cpu_avx512vp2intersect.cpp  cpu_avx512vpclmulqdw.cpp  cpu_avx512vpopcntdq.cpp  cpu_avxvnni.cpp  cpu_bmi.cpp  cpu_bmi2.cpp  cpu_fma.cpp  cpu_fp16c.cpp  cpu_gfni.cpp  cpu_lzcnt.cpp  cpu_sha512.cpp  cpu_sm3.cpp  cpu_sm4.cpp  cpu_vpclmulqdq.cpp  helper.h  vaes.cpp
checks/cuda/: README.md  cuda_1_2.cu  cuda_2_0.cu  (+4 more)
optviewer/: README.md  opt-viewer.py  python-shell.nix  shell.nix
test/: .gitignore  CMakeLists.txt  compile_commands.json  test
test/.cache/clangd/index/: test.c.188881EDE0210DEC.idx
(+58 files in other folders)
